              (not a pointer) and is now accessible through python.  The old
              rawVector() is kept but deprecated, and returns by reference also.
            - AngleStructure now has copy and move constructors, copy and move
              assignment, and member and global swap() functions.  The old
              clone() is now deprecated; use the copy constructor instead.
            - Changed triangulation() to return a reference, not a pointer.
            - Constructors now take their arguments by reference (and,
              for the vector constructor, optionally an rvalue reference).
            - Added variants of constructors that take a SnapshotRef of
              a triangulation instead of a triangulation.
        Class AngleStructures:
            - Angle structure lists now hold a snapshot of the underlying
              triangulation at the time of creation.  The triangulation
              that was originally used can be safely modified or even deleted.
            - Replaced enumerate() and enumerateTautDD() with a unified class
              constructor; this will not insert the new list into the packet
              tree, and will not start in a background thread.  The new class
              constructor allows you to choose your preferred enumeration
              algorithm via an AngleAlg argument.  The old enumerate() and
              enumerateTautDD() are kept as deprecated aliases, and now
              explicitly return packets (not "pure" AngleStructures objects).
            - Added copy/move construction and copy/move assignment.
            - Added member and global swap() functions.
            - Added begin() and end() for iteration through angle strutures.
            - Changed triangulation() and surface() to return const references,
              not pointers.
            - Changed enumerate() and enumerateTautDD() to take the
              triangulation argument by reference, not by pointer.