@@ -157,7 +157,7 @@ void NormalHypersurface::writeXMLData(std::ostream& out, FileFormat format,
     out << " </hypersurface>\n";
 }
 
-bool NormalHypersurface::sameSurface(const NormalHypersurface& other) const {
+bool NormalHypersurface::operator == (const NormalHypersurface& other) const {
     if (enc_ == other.enc_) {
         // This is a common case, and a straight left-to-right scan
         // should be faster than jumping around the vectors.
@@ -165,6 +165,8 @@ bool NormalHypersurface::sameSurface(const NormalHypersurface& other) const {
     }
 
     size_t nPents = triangulation_->size();
+    if (nPents != other.triangulation_->size())
+        return false;
 
     for (size_t p = 0; p < nPents; ++p) {
         for (int i = 0; i < 5; ++i)
