@@ -89,6 +89,7 @@ Version 7.0  [ 10 December, 2021 ]
             - AngleStructure now has copy and move constructors, copy and move
               assignment, and member and global swap() functions.  The old
               clone() is now deprecated; use the copy constructor instead.
+            - Added comparison operators == and !=.
             - Changed triangulation() to return a reference, not a pointer.
             - Constructors now take their arguments by reference (and,
               for the vector constructor, optionally an rvalue reference).
@@ -873,6 +874,8 @@ Version 7.0  [ 10 December, 2021 ]
               the internal integer vector.
             - New routine reconstructTetrahedra(), which now makes this
               functionality available to the outside world.
+            - Renamed sameSurface() to operator ==, and added operator !=.
+              The old routine sameSurface() is kept but deprecated.
             - Removed countCoords() completely, since its meaning is
               amgibuous as to whether it refers to the original
               coordinate system or the current internal encoding.
@@ -934,6 +937,8 @@ Version 7.0  [ 10 December, 2021 ]
               the internal integer vector.
             - New routine reconstructTriangles(), which now makes this
               functionality available to the outside world.
+            - Renamed sameSurface() to operator ==, and added operator !=.
+              The old routine sameSurface() is kept but deprecated.
             - Removed countCoords() completely, since its meaning is
               amgibuous as to whether it refers to the original
               coordinate system or the current internal encoding.
